--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,22 +1,99 @@
-.App {
+.app {
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
+  background-image: url('./leio-mclaren-leiomclaren-Beach.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.content-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 55vh;
+  width: 20vw;
+  border: 2px solid rgba(192, 190, 190, 0.8);
+  border-radius: 5%;
+  background-color: rgba(192, 190, 190, 0.6);
+}
+
+.googleLogin{
+  width: 14vw;
+  color: black;
+}
+
+.inputs {
+  width: 14vw;
+  /* border-radius: 20%; */
+  margin-bottom: 2%;
+  height: 2vh;
+}
+h3 {
+  margin-bottom: 2%;
+}
+h1 {
+  margin-top: 0%;
+  padding-top: 3%;
+}
+.inputsOther {
+  width: 14vw;
+  /* border-radius: 20%; */
+  margin-bottom: 2%;
+  height: 2vh;
+}
+
+#submitButtonOne {
+  font-size: 1em;
+  background-color: white;
+  border-radius: 8%;
+}
+
+#submitButtonOne:hover {
+  font-size: 1em;
+  background-color: rgb(219, 217, 217);
+  border-radius: 8%;
+}
+
+#submitButtonTwo {
+  font-size: 1em;
+  background-color: white;
+  border-radius: 8%;
+}
+
+#submitButtonTwo:hover {
+  font-size: 1em;
+  background-color: rgb(219, 217, 217);
+  border-radius: 8%;
+}
+
+/********************************************* WELCOME PAGE ****************************************/
+
+.welcomePage {
+  height: 97vh;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
+/********************************************* NAVBAR ****************************************/
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  height: 5vh;
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgba(192, 190, 190, 0.8);
 }
 
-.App-link {
-  color: #09d3ac;
+.links {
+  text-decoration: none;
+  font-size: 1.5em;
+  color: black;
+  opacity: .8;
+}
+
+.links:hover {
+  color: coral;
 }
